# minesweeper-nojs

./: .gitattributes  Cargo.toml  README.md  build.sh  bun.lockb  flake.nix  inputs.json  justfile  package.json  rust-toolchain.toml  server.ts  style.css  style.json  table.json  treefmt.nix
.cargo/: config.toml
src/: html_prealloc_sizes.rs  main.rs
