[package]
name = "minesweeper-nojs"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = "symbols"
lto = "thin"
opt-level = 3
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3
codegen-units = 1
[profile.release.package."*"]
opt-level = 3
codegen-units = 1
[profile.dev.build-override]
opt-level = 3
codegen-units = 1

[dependencies]
url = "2.4.0"

[dependencies.hyper]
version = "1.0.0-rc.3"
features = ["full"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.http-body-util]
version = "0.1.0-rc.2"

[profile.release.build-override]
opt-level = 3
codegen-units = 1
