[package]
name = "minesweeper-nojs"
version = "1.4.8"
edition = "2021"

[profile.release]
strip = "symbols"
lto = true
opt-level = "s"
codegen-units = 1

[profile.dev.package."*"]
opt-level = "s"
codegen-units = 1
[profile.dev.build-override]
opt-level = "s"
codegen-units = 1

[profile.release.package."*"]
opt-level = "s"
codegen-units = 1
[profile.release.build-override]
opt-level = "s"
codegen-units = 1

[dependencies.url]
version = "2.5.0"

[dependencies.hyper]
version = "1.3"
features = ["full"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.http-body-util]
version = "0.1.1"

[dependencies.hyper-util]
version = "0.1.3"
features = ["tokio"]
